# http-server

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  asio.cc  simple-uv.c  simple.c
include/http-server/: http-server.h
src/: CMakeLists.txt  build_config.h.in  client.c  errors.c  event.c  event.h  event_kqueue.c  event_select.c  handler.c  header.c  response.c  server.c  string.c
tests/: CMakeLists.txt  clar.suite  client.c  strings.c  test_app.c  test_blackbox.py  test_errors.c  test_http_server.c  test_response.c
